# mapd-core

./: .bash_profile  .cproject  CMakeLists.txt  DistributedLoader.cpp  DistributedLoader.h  LeafAggregator.cpp  LeafAggregator.h  LeafHostInfo.cpp  LeafHostInfo.h  MapDServer.cpp  test-sql.txt
Catalog/: CMakeLists.txt  LdapServer.cpp  LdapServer.h
Licensing/: AWSBillingProducts.in.h  AWSMarketplace.cpp  AWSMarketplace.h  CMakeLists.txt
ODBC/: CMakeLists.txt  Main_Unix.cpp  Quickstart.h
ODBC/Common/: QSUtilities.h  QSUtilities_Unix.cpp
ODBC/Core/: QSConnection.cpp  QSConnection.h  QSDriver.cpp  QSDriver.h  QSEnvironment.cpp  QSEnvironment.h  QSStatement.cpp  QSStatement.h
ODBC/DataEngine/: QSDataEngine.cpp  QSDataEngine.h  QSMetadataHelper.cpp  QSMetadataHelper.h  QSTable.cpp  QSTable.h  QSTypeInfoMetadataSource.cpp  QSTypeInfoMetadataSource.h
QueryRenderer/: Buffer.h  BufferLayout.cpp  BufferLayout.h  CMakeLists.txt  Color.cpp  Color.h  DataTable.cpp  DataTable.h  GeomConfig.cpp  GeomConfig.h  MapDGL.cpp  MapDGL.h  PerGpuData.cpp  PerGpuData.h  PngData.cpp  PngData.h  QueryDataLayout.cpp  QueryDataLayout.h  QueryDataTable.cpp  QueryDataTable.h  QueryFramebuffer.cpp  QueryFramebuffer.h  QueryIdMapPboPool.h  QueryIdMapPixelBuffer.h  QueryRenderCompositor.cpp  QueryRenderCompositor.h  QueryRenderManager.cpp  QueryRenderManager.h  QueryRenderer.cpp  QueryRenderer.h  QueryRendererConfig.cpp  QueryRendererConfig.h  QueryRendererConfigJSONHandler.h  QueryRendererContext.cpp  QueryRendererContext.h  QueryRendererError.h  QueryRendererObjects.cpp  QueryRendererObjects.h  QueryResultVertexBuffer.cpp  QueryResultVertexBuffer.h  (+24 more)
QueryRenderer/Data/: BaseQueryDataTable.cpp  BaseQueryDataTable.h  QueryDataTable.cpp  QueryDataTable.h  QueryPolyDataTable.cpp  QueryPolyDataTable.h  Types.cpp  Types.h  Utils.cpp  Utils.h
QueryRenderer/Interop/: QueryBuffer.cpp  QueryBuffer.h  QueryResultVertexBuffer.cpp  Types.h
QueryRenderer/Marks/: BaseMark.cpp  BaseMark.h  Enums.cpp  Enums.h  PointMark.cpp  PointMark.h  PolyMark.cpp  PolyMark.h  QueryRendererObjects.cpp  QueryRendererObjects.h  RenderProperty.cpp  RenderProperty.h  Types.h  Utils.cpp  Utils.h
QueryRenderer/Marks/shaders/: lineTemplate.frag  lineTemplate.geom  lineTemplate.vert  lineTemplate_frag.h  lineTemplate_geom.h  lineTemplate_vert.h  linearScaleTemplate_vert.h  ordinalScaleTemplate.vert  pointTemplate.frag  pointTemplate.vert  pointTemplate_frag.h  pointTemplate_vert.h  polyTemplate.frag  polyTemplate.vert  polyTemplate_frag.h  polyTemplate_vert.h
QueryRenderer/Rendering/: BaseQueryRsrcPool.h  DistributedRenderBufferCompositor.cpp  DistributedRenderBufferCompositor.h  QueryAccumTxPool.cpp  QueryAccumTxPool.h  QueryBufferPool.h  QueryFramebuffer.cpp  QueryFramebuffer.h  QueryIdMapPboPool.cpp  QueryIdMapPboPool.h  QueryIdMapPixelBuffer.cpp  QueryIdMapPixelBuffer.h  QueryRenderCompositor.cpp  QueryRenderCompositor.h  QueryRenderSMAAPass.cpp  QueryRenderSMAAPass.h  Types.h
QueryRenderer/Rendering/egl/: EglQueryRenderCompositorImpl.cpp  EglQueryRenderCompositorImpl.h
QueryRenderer/Rendering/glx/: GlxQueryRenderCompositorImpl.cpp  GlxQueryRenderCompositorImpl.h
QueryRenderer/Rendering/glx/shaders/: accumulator_frag.h  compositor.frag  compositor.vert  compositor_frag.h  compositor_vert.h
QueryRenderer/Rendering/shaders/: OITComposite_frag.h  OITPassThru_vert.h  SMAABlendingWeightCalculation_frag.h  SMAAEdgeDetection_frag.h  SMAANeighborhoodBlending_frag.h  SMAAPassThru_vert.h  accumulatorTx_findExtents_frag.h  accumulatorTx_findStdDev_frag.h  accumulator_passThru_vert.h  distributedCompositor_frag.h  distributedCompositor_vert.h  multiGpuCompositeAccumulator_frag.h  multiGpuComposite_frag.h  multiGpuComposite_vert.h
QueryRenderer/Scales/: Scale.cpp  Scale.h  ScaleDomainRangeData.cpp  ScaleDomainRangeData.h  ScaleRef.cpp  ScaleRef.h  Types.cpp  Types.h  Utils.cpp  Utils.h
QueryRenderer/Scales/shaders/: accumulatorScale_1stPass_frag.h  accumulatorScale_2ndPass_frag.h  accumulatorScale_2ndPass_vert.h  linearScaleTemplate_vert.h  ordinalScaleTemplate_vert.h  quantitativeScaleTemplate_vert.h  quantizeScaleTemplate.vert  quantizeScaleTemplate_vert.h
QueryRenderer/Utils/: RapidJSONUtils.cpp  RapidJSONUtils.h  ShaderUtils.cpp  ShaderUtils.h  Utilities.cpp  Utils.cpp  Utils.h
QueryRenderer/egl/: EglQueryRenderCompositor.cpp  EglQueryRenderCompositor.h  EglQueryRenderCompositorImpl.cpp  EglQueryRenderCompositorImpl.h
QueryRenderer/glx/: GlxQueryRenderCompositorImpl.cpp  GlxQueryRenderCompositorImpl.h
QueryRenderer/glx/shaders/: compositor.frag  compositor_frag.h
QueryRenderer/shaders/: linearScaleTemplate.vert  linearScaleTemplate_vert.h  ordinalScaleTemplate.vert  ordinalScaleTemplate_vert.h  point.vert  pointTemplate.frag  pointTemplate.vert  pointTemplate_frag.h  pointTemplate_vert.h
Rendering/: CMakeLists.txt  RenderError.h  Renderer.cpp  Renderer.h  Types.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Rendering/Colors/: BaseColor4f.cpp  BaseColor4f.h  ColorHCL.cpp  ColorHCL.h  ColorHSL.cpp  ColorHSL.h  ColorInitializer.h  ColorLAB.cpp  ColorLAB.h  ColorRGBA.cpp  ColorRGBA.h  ColorUnion.cpp  ColorUnion.h  Types.cpp  Types.h  Utils.cpp  Utils.h
Rendering/Math/: AABox.h  Constants.h  Point.h  Types.h
Rendering/Objects/: Array2d.h  ColorRGBA.cpp  ColorRGBA.h  Types.h  Viewport.h
Rendering/Renderer/GL/: GLRenderer.cpp  GLRenderer.h  GLResourceManager.cpp  GLResourceManager.h  GLUtility.cpp  GLUtility.h  GLWindow.cpp  GLWindow.h  MapDGL.cpp  MapDGL.h  TypeGL.cpp  TypeGL.h  Types.cpp  Types.h
Rendering/Renderer/GL/Resources/: Enums.cpp  Enums.h  GLBaseBuffer.cpp  GLBaseBuffer.h  GLBufferLayout.cpp  GLBufferLayout.h  GLFramebuffer.cpp  (+30 more)
Rendering/Settings/: BaseSettings.cpp  BaseSettings.h  IntSettings.cpp  IntSettings.h  RendererSettings.cpp  RendererSettings.h  StrSettings.cpp  StrSettings.h  Types.h  WindowSettings.cpp  WindowSettings.h
StringDictionary/: CMakeLists.txt  LruCache.hpp  StringDictionaryClient.cpp  StringDictionaryClient.h  StringDictionaryServer.cpp  string_dictionary.thrift
(+87 files in other folders)
